@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.6246 2024/10/14 14:30:06 schmonz Exp $
+$NetBSD: CHANGES-2024,v 1.6247 2024/10/14 14:33:11 reinoud Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -9460,3 +9460,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Updated databases/py-tortoise-orm to 0.21.7 [adam 2024-10-14]
 	Updated www/snac to 2.60 [schmonz 2024-10-14]
 	Updated devel/texttest to 4.4.0.1 [schmonz 2024-10-14]
+	Updated misc/udfclient to 0.8.21 [reinoud 2024-10-14]
